--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=SimpleSerialShell
-version=2.0.1
+version=0.0.2
 
 author=philj404
 maintainer=philj404
-sentence=Simple serial text shell for sending commands to Arduino board
-paragraph=Serial text shell for sending commands to Arduino through serial monitor.  Commands must be in the (Unix-style) "int hello(int argc, char **argv)" format.
+sentence=Simple serial text shell for sending commands to Arduino board.
+paragraph=Text Commands are parsed from an attached Stream, (for example Serial connected the Serial Monitor from the IDE).  Shell commands have the "int hello(int argc, char **argv)" function signature, so you can pass in arguments.  
 category=Communication
 url=https://github.com/philj404/SimpleSerialShell
 architectures=*
