prep for publication

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=SimpleSerialShell
-version=0.0.2
+version=0.1.0
 
 author=philj404
 maintainer=philj404
 sentence=Simple serial text shell for sending commands to Arduino board.
-paragraph=Text Commands are parsed from an attached Stream, (for example Serial connected the Serial Monitor from the IDE).  Shell commands have the "int hello(int argc, char **argv)" function signature, so you can pass in arguments.  
+paragraph=Text Commands are parsed from an attached Stream (for example 'Serial' connected to the IDE's Serial Monitor).  Shell commands have the "int hello(int argc, char **argv)" function signature, so you can pass in arguments.  
 category=Communication
 url=https://github.com/philj404/SimpleSerialShell
 architectures=*
