updated author, maintainer

--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=SimpleSerialShell
 version=0.1.0
 
-author=philj404
-maintainer=philj404
+author=Phil Jansen
+maintainer=Phil Jansen
 sentence=Simple serial text shell for sending commands to Arduino board.
 paragraph=Text Commands are parsed from an attached Stream (for example 'Serial' connected to the IDE's Serial Monitor).  Shell commands have the "int hello(int argc, char **argv)" function signature, so you can pass in arguments.  
 category=Communication
