--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -22,8 +22,8 @@ jobs:
     - name: test platforms
       run: python3 ci/build_platform.py main_platforms
 
-    - name: doxygen
-      env:
-        GH_REPO_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
-        PRETTYNAME : "SimpleSerialShell Library"
-      run: bash ci/doxy_gen_and_deploy.sh
+    - #name: doxygen
+      #env:
+      #  GH_REPO_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
+      #  PRETTYNAME : "SimpleSerialShell Library"
+      #run: bash ci/doxy_gen_and_deploy.sh
