--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -22,7 +22,7 @@ jobs:
     - name: test platforms
       run: python3 ci/build_platform.py main_platforms
 
-    - #name: doxygen
+    #- name: doxygen
       #env:
       #  GH_REPO_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
       #  PRETTYNAME : "SimpleSerialShell Library"
