--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -22,7 +22,10 @@ jobs:
     - name: test platforms
       run: python3 ci/build_platform.py main_platforms
 
-    # make sure there is a "gh-pages" branch!
+    # Make sure:
+    #    there is a "gh-pages" branch
+    #    github repository has a secret GH_REPO_TOKEN with repo access
+    #        (used to push generated docs back onto github)
     - name: doxygen
       env:
         GH_REPO_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
