--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -1,4 +1,4 @@
-name: Arduino Library CI
+name: Arduino SimpleSerialShell Library CI
 
 on: [pull_request, push, repository_dispatch]
 
@@ -22,8 +22,13 @@ jobs:
     - name: test platforms
       run: python3 ci/build_platform.py main_platforms
 
-    #- name: doxygen
-      #env:
-      #  GH_REPO_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
-      #  PRETTYNAME : "SimpleSerialShell Library"
-      #run: bash ci/doxy_gen_and_deploy.sh
+    # Make sure:
+    #    there is a "gh-pages" branch
+    #    github repository has a secret GH_REPO_TOKEN with repo access
+    #        (used to push generated docs back onto github)
+    #
+    - name: doxygen
+      env:
+        GH_REPO_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
+        PRETTYNAME : "SimpleSerialShell Library"
+      run: bash ci/doxy_gen_and_deploy.sh
