--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # (borrowed from Adafruit_NeoPixel lib)
 #
 # Our handy .gitignore for automation ease
-Doxyfile*
+#Doxyfile*
 doxygen_sqlite3.db
 html
 latex
