Added the ability to install a custom tokenizer function.  This would be useful for applications that have command syntaxes that can't be parsed by the simple space-delimited format supported by strtok_r(3).

--- a/extras/tests/CustomParserTest/Makefile
+++ b/extras/tests/CustomParserTest/Makefile
@@ -4,7 +4,7 @@
 # NOTE: At the moment there is a dependency on V1.0.0 of the EpoxyDuino 
 # project due to some confusion around end-of-line treatment.  
 #
-APP_NAME := simpleSerialShellTest
+APP_NAME := CustomParserTest
 ARDUINO_LIBS := AUnit SimpleSerialShell
 CPPFLAGS += -Werror
 include ../../../../EpoxyDuino/UnixHostDuino.mk
